--- a/goals_social_network/pubspec.yaml
+++ b/goals_social_network/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
   http: 1.2.0
+  provider: 6.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
