--- a/goals_social_network/pubspec.yaml
+++ b/goals_social_network/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
 
   http: 1.2.0
   provider: 6.1.1
+  shared_preferences: ^2.2.2
+  another_flushbar: ^1.12.29
 
 
   # The following adds the Cupertino Icons font to your application.
