Some new additions to the UI

--- a/goals_social_network/windows/.gitignore
+++ b/goals_social_network/windows/.gitignore
@@ -1,6 +1,6 @@
 flutter/ephemeral/
 
-# Visual Studio user.dart-specific files.
+# Visual Studio auth_user.dart-specific files.
 *.suo
 *.user
 *.userosscache
