--- a/goals_social_network/pubspec.yaml
+++ b/goals_social_network/pubspec.yaml
@@ -32,9 +32,10 @@ dependencies:
     sdk: flutter
 
   http: 1.2.0
-  provider: 6.1.1
+  provider: ^6.1.2
   shared_preferences: ^2.2.2
   another_flushbar: ^1.12.29
+  share_plus: ^7.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -50,7 +51,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
