--- a/goals_social_network/pubspec.yaml
+++ b/goals_social_network/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   shared_preferences: ^2.2.2
   another_flushbar: ^1.12.29
   share_plus: ^7.2.1
-
+  image_picker: ^1.0.8
+  video_thumbnail: ^0.5.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
