--- a/goals_social_network/pubspec.yaml
+++ b/goals_social_network/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   share_plus: ^7.2.1
   image_picker: ^1.0.8
   video_thumbnail: ^0.5.3
+  flutter_3d_choice_chip: ^0.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
