--- a/goals_social_network/pubspec.yaml
+++ b/goals_social_network/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^1.0.8
   video_thumbnail: ^0.5.3
   flutter_3d_choice_chip: ^0.1.4
+  flutter_slidable: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
