--- a/goals_social_network/pubspec.yaml
+++ b/goals_social_network/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   video_thumbnail: ^0.5.3
   flutter_3d_choice_chip: ^0.1.4
   flutter_slidable: ^3.1.0
+  flutter_glow: ^0.3.0
+  accordion: ^2.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
