--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<name>course</name>
 	<description>Course project on Spring Boot</description>
 	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
