Changes to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Course project on Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -80,8 +82,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>17</source>  <!-- same as <java.version> -->
+					<target>17</target>
 				</configuration>
 			</plugin>
 		</plugins>
